# hackathon-nvidia

./: README.md
newsletter/: README.md  pyproject.toml  report.md  resumo_do_topico.md
newsletter/src/newsletter/: crew.py  main.py
newsletter/src/newsletter/config/: agents.yaml  tasks.yaml
newsletter/src/newsletter/tools/: img_search_tool.py
newsletter/tests/: test_nvidia.py
startup_finder/: README.md  pyproject.toml
startup_finder/src/startup_finder/: crew.py  main.py
startup_finder/src/startup_finder/config/: agents.yaml
