[project]
name = "startup_finder"
version = "0.1.0"
description = "startup-finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
startup_finder = "startup_finder.main:run"
run_crew = "startup_finder.main:run"
train = "startup_finder.main:train"
replay = "startup_finder.main:replay"
test = "startup_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
